# task-stardist

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  descriptor.yml  pyproject.toml
.github/workflows/: ci.yaml
examples/inputs/: image
models/2D_versatile_HE/: config.json
scripts/: run.py
